infra/k8s/base/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: retailstore
spec:
  replicas: 1

  selector:
    matchLabels:
      app: admin

  template:
    metadata:
      labels:
        app: admin

    spec:
      containers:
        - name: admin
          image: TODO : REEEMPLAZAR POR IMAGEN/admin:latest 

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
