infra/k8s/base/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: retailstore
spec:
  replicas: 1

  selector:
    matchLabels:
      app: cart

  template:
    metadata:
      labels:
        app: cart

    spec:
      containers:
        - name: cart

          image: xshrp/retailstore-carts:latest

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
