infra/k8s/base/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: retailstore
spec:
  replicas: 1

  selector:
    matchLabels:
      app: catalog

  template:
    metadata:
      labels:
        app: catalog

    spec:
      containers:
        - name: catalog
          image: xshrp/retailstore-catalog:latest

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
