infra/k8s/base/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: retailstore
spec:
  replicas: 1

  selector:
    matchLabels:
      app: orders

  template:
    metadata:
      labels:
        app: orders

    spec:
      containers:
        - name: orders

          image: xshrp/retailstore-orders:latest

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
