infra/k8s/base/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: retailstore
spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis

          image: redis:7-alpine

          ports:
            - containerPort: 6379

          args:
            - redis-server
            - --appendonly
            - "yes"

          volumeMounts:
            - name: redis-storage
              mountPath: /data

          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 15
            periodSeconds: 10

      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
