infra/k8s/base/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: retailstore
spec:
  replicas: 1

  selector:
    matchLabels:
      app: ui

  template:
    metadata:
      labels:
        app: ui

    spec:
      containers:
        - name: ui

          image: xshrp/retailstore-ui:latest

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
