infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retailstore-ingress
  namespace: retailstore
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80

          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 80
